--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,7 @@ body{
     top: 0;
     left: 0;
     background-color: hsl(209, 23%, 22%);
+    z-index: 11;
 }
 
 .header h5{
@@ -73,3 +74,48 @@ body{
     font-weight: 300;
     opacity: 80%;
 }
+
+.country_bottom h4{
+    color: #fff;
+    text-align: center;
+    margin-top: 15px;
+}
+
+input{
+    padding: 10px 25px;
+    color: #fff;
+    border-radius: 5px;
+    background: hsl(209, 23%, 22%);
+    border: none;
+    outline: none;
+    margin-bottom: 50px;
+    cursor: pointer;
+}
+
+::placeholder{
+    color: #fff;
+    font-size: 1rem;
+}
+
+.country_top{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 50px;
+}
+
+select{
+    padding: 10px 25px;
+    background: hsl(209, 23%, 22%);
+    margin-bottom: 50px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    color: #fff;
+    cursor: pointer;
+}
+
+option{
+    cursor: pointer;
+}
+
